Use new AppIndicator wrappers